// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > modelValue: true, size: 2xl, title: Wonderful SEI modal, hideHeader: false, z-index: 10 1`] = `
"<body>
    <div></div>
    <div data-id="sds-modal-backdrop" class="fixed inset-0 block h-full bg-black/50 z-10"></div>
    <div class="fixed inset-0 block h-full w-full overflow-auto z-50">
        <button class="fixed inset-0 h-full w-full cursor-auto"><span class="sr-only">Close modal</span>
        </button>
        <div role="dialog" data-id="sds-modal" class="z-50 p-2" aria-labelledby="v-0">
            <div class="relative block w-full mx-auto bg-white border rounded-theme-lg shadow-xl dark:text-gray-25 dark:bg-gray-900 dark:border-gray-800 md:my-16 z-10 md:max-w-xl lg:max-w-2xl xl:max-w-4xl 2xl:max-w-6xl">
                <div class="flex items-center p-6 pb-0">
                    <div id="v-0" class="flex items-center gap-2 text-2xl leading-7 font-light">
                        <!-- @slot Modal title content. -->Wonderful SEI modal</div>
                    <button aria-label="close" class="inline-block p-0 ml-auto text-lg text-gray-500 bg-transparent border-0 cursor-pointer hover:text-gray-700 hover:outline-hidden focus:text-gray-700 focus:outline-hidden dark:hover:text-gray-300 dark:focus:text-gray-300 active:text-gray-500 dark:active:text-gray-600">
                        <svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em"
                        height="1.2em">
                            <path fill="currentColor" d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"></path>
                        </svg>
                    </button>
                </div>
                <div class="p-6">
                    <!-- @slot Modal content. -->
                </div>
                <!--v-if-->
            </div>
        </div>
    </div>
</body>"
`;

exports[`Modal > modelValue: true, size: lg, title: Wonderful SEI modal, hideHeader: false, z-index: 30 1`] = `
"<body>
    <div></div>
    <div data-id="sds-modal-backdrop" class="fixed inset-0 block h-full bg-black/50 z-30"></div>
    <div class="fixed inset-0 block h-full w-full overflow-auto z-50">
        <button class="fixed inset-0 h-full w-full cursor-auto"><span class="sr-only">Close modal</span>
        </button>
        <div role="dialog" data-id="sds-modal" class="z-50 p-2" aria-labelledby="v-0">
            <div class="relative block w-full mx-auto bg-white border rounded-theme-lg shadow-xl dark:text-gray-25 dark:bg-gray-900 dark:border-gray-800 md:my-16 z-30 md:max-w-xl lg:max-w-2xl">
                <div class="flex items-center p-6 pb-0">
                    <div id="v-0" class="flex items-center gap-2 text-2xl leading-7 font-light">
                        <!-- @slot Modal title content. -->Wonderful SEI modal</div>
                    <button aria-label="close" class="inline-block p-0 ml-auto text-lg text-gray-500 bg-transparent border-0 cursor-pointer hover:text-gray-700 hover:outline-hidden focus:text-gray-700 focus:outline-hidden dark:hover:text-gray-300 dark:focus:text-gray-300 active:text-gray-500 dark:active:text-gray-600">
                        <svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em"
                        height="1.2em">
                            <path fill="currentColor" d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"></path>
                        </svg>
                    </button>
                </div>
                <div class="p-6">
                    <!-- @slot Modal content. -->
                </div>
                <!--v-if-->
            </div>
        </div>
    </div>
</body>"
`;

exports[`Modal > modelValue: true, size: md, title: Wonderful SEI modal, hideHeader: false 1`] = `
"<body>
    <div></div>
    <div data-id="sds-modal-backdrop" class="fixed inset-0 block h-full bg-black/50 z-50"></div>
    <div class="fixed inset-0 block h-full w-full overflow-auto z-50">
        <button class="fixed inset-0 h-full w-full cursor-auto"><span class="sr-only">Close modal</span>
        </button>
        <div role="dialog" data-id="sds-modal" class="z-50 p-2" aria-labelledby="v-0">
            <div class="relative block w-full mx-auto bg-white border rounded-theme-lg shadow-xl dark:text-gray-25 dark:bg-gray-900 dark:border-gray-800 md:my-16 z-50 md:max-w-xl">
                <div class="flex items-center p-6 pb-0">
                    <div id="v-0" class="flex items-center gap-2 text-2xl leading-7 font-light">
                        <!-- @slot Modal title content. -->Wonderful SEI modal</div>
                    <button aria-label="close" class="inline-block p-0 ml-auto text-lg text-gray-500 bg-transparent border-0 cursor-pointer hover:text-gray-700 hover:outline-hidden focus:text-gray-700 focus:outline-hidden dark:hover:text-gray-300 dark:focus:text-gray-300 active:text-gray-500 dark:active:text-gray-600">
                        <svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em"
                        height="1.2em">
                            <path fill="currentColor" d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"></path>
                        </svg>
                    </button>
                </div>
                <div class="p-6">
                    <!-- @slot Modal content. -->
                </div>
                <!--v-if-->
            </div>
        </div>
    </div>
</body>"
`;

exports[`Modal > modelValue: true, size: md, title: Wonderful SEI modal, hideHeader: true 1`] = `
"<body>
    <div></div>
    <div data-id="sds-modal-backdrop" class="fixed inset-0 block h-full bg-black/50 z-50"></div>
    <div class="fixed inset-0 block h-full w-full overflow-auto z-50">
        <button class="fixed inset-0 h-full w-full cursor-auto sr-only"><span class="sr-only">Close modal</span>
        </button>
        <div role="dialog" data-id="sds-modal" class="z-50 p-2" aria-labelledby="v-0">
            <div class="relative block w-full mx-auto bg-white border rounded-theme-lg shadow-xl dark:text-gray-25 dark:bg-gray-900 dark:border-gray-800 md:my-16 z-50 md:max-w-xl">
                <div class="flex items-center p-6 pb-0 sr-only">
                    <div id="v-0" class="flex items-center gap-2 text-2xl leading-7 font-light">
                        <!-- @slot Modal title content. -->Wonderful SEI modal</div>
                    <button aria-label="close" class="inline-block p-0 ml-auto text-lg text-gray-500 bg-transparent border-0 cursor-pointer hover:text-gray-700 hover:outline-hidden focus:text-gray-700 focus:outline-hidden dark:hover:text-gray-300 dark:focus:text-gray-300 active:text-gray-500 dark:active:text-gray-600">
                        <svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em"
                        height="1.2em">
                            <path fill="currentColor" d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"></path>
                        </svg>
                    </button>
                </div>
                <div class="p-6">
                    <!-- @slot Modal content. -->
                </div>
                <!--v-if-->
            </div>
        </div>
    </div>
</body>"
`;

exports[`Modal > modelValue: true, size: sm, title: Wonderful SEI modal, hideHeader: false, z-index: 40 1`] = `
"<body>
    <div></div>
    <div data-id="sds-modal-backdrop" class="fixed inset-0 block h-full bg-black/50 z-40"></div>
    <div class="fixed inset-0 block h-full w-full overflow-auto z-50">
        <button class="fixed inset-0 h-full w-full cursor-auto"><span class="sr-only">Close modal</span>
        </button>
        <div role="dialog" data-id="sds-modal" class="z-50 p-2" aria-labelledby="v-0">
            <div class="relative block w-full mx-auto bg-white border rounded-theme-lg shadow-xl dark:text-gray-25 dark:bg-gray-900 dark:border-gray-800 md:my-16 z-40 md:max-w-sm">
                <div class="flex items-center p-6 pb-0">
                    <div id="v-0" class="flex items-center gap-2 text-2xl leading-7 font-light">
                        <!-- @slot Modal title content. -->Wonderful SEI modal</div>
                    <button aria-label="close" class="inline-block p-0 ml-auto text-lg text-gray-500 bg-transparent border-0 cursor-pointer hover:text-gray-700 hover:outline-hidden focus:text-gray-700 focus:outline-hidden dark:hover:text-gray-300 dark:focus:text-gray-300 active:text-gray-500 dark:active:text-gray-600">
                        <svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em"
                        height="1.2em">
                            <path fill="currentColor" d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"></path>
                        </svg>
                    </button>
                </div>
                <div class="p-6">
                    <!-- @slot Modal content. -->
                </div>
                <!--v-if-->
            </div>
        </div>
    </div>
</body>"
`;

exports[`Modal > modelValue: true, size: xl, title: Wonderful SEI modal, hideHeader: false, z-index: 20 1`] = `
"<body>
    <div></div>
    <div data-id="sds-modal-backdrop" class="fixed inset-0 block h-full bg-black/50 z-20"></div>
    <div class="fixed inset-0 block h-full w-full overflow-auto z-50">
        <button class="fixed inset-0 h-full w-full cursor-auto"><span class="sr-only">Close modal</span>
        </button>
        <div role="dialog" data-id="sds-modal" class="z-50 p-2" aria-labelledby="v-0">
            <div class="relative block w-full mx-auto bg-white border rounded-theme-lg shadow-xl dark:text-gray-25 dark:bg-gray-900 dark:border-gray-800 md:my-16 z-20 md:max-w-xl lg:max-w-2xl xl:max-w-4xl">
                <div class="flex items-center p-6 pb-0">
                    <div id="v-0" class="flex items-center gap-2 text-2xl leading-7 font-light">
                        <!-- @slot Modal title content. -->Wonderful SEI modal</div>
                    <button aria-label="close" class="inline-block p-0 ml-auto text-lg text-gray-500 bg-transparent border-0 cursor-pointer hover:text-gray-700 hover:outline-hidden focus:text-gray-700 focus:outline-hidden dark:hover:text-gray-300 dark:focus:text-gray-300 active:text-gray-500 dark:active:text-gray-600">
                        <svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em"
                        height="1.2em">
                            <path fill="currentColor" d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"></path>
                        </svg>
                    </button>
                </div>
                <div class="p-6">
                    <!-- @slot Modal content. -->
                </div>
                <!--v-if-->
            </div>
        </div>
    </div>
</body>"
`;

exports[`Modal > should match its default snapshot 1`] = `"<body></body>"`;
